--- a/koha-tmpl/intranet-tmpl/default/de/parameters/aqbookfund.tmpl
+++ b/koha-tmpl/intranet-tmpl/default/de/parameters/aqbookfund.tmpl
@@ -1,16 +1,17 @@
 <!-- TMPL_INCLUDE NAME="parameters-top.inc" -->
 <div id="mainbloc">
 	<!-- TMPL_IF NAME="else" -->
-	<h1>Administration Erwerbungsetats</h1>
+	<h1>Administration Mediensetats</h1>
 	<form action="<!-- TMPL_VAR NAME="scriptname" -->" method="post">
-	<input type="text" name="searchfield" value=""><input type="reset" name="reset" value="l&ouml;schen"></form>
+	<input type="text" name="searchfield" value=""><input type="reset" name="reset" value="clr"></form>
 	<!-- TMPL_IF NAME="search" -->
 		<br>Sie suchten nach <b><!-- TMPL_VAR NAME="searchfield" --></b><p><br>
 	<!-- /TMPL_IF -->
 	<table border="0" cellspacing="0" cellpadding="2" width="80%">
 	<tr>
-		<th>Erwerbungsetat</th>
+		<th>Medienetat</th>
 		<th>Name</th>
+		<th>Zweigstelle</th>
 		<th>Bearbeiten</th>
 		<th>L&ouml;schen</th>
 		</tr>
@@ -19,11 +20,7 @@
 			<td><!-- TMPL_VAR NAME="bookfundid" --></td>
 			<td><!-- TMPL_VAR NAME="bookfundname" --></td>
 			<td align="center">
-			<!--TMPL_IF Name="branchname"-->
-				<!--TMPL_VAR Name="branchname"-->
-			<!--TMPL_ELSE -->
-				&nbsp;
-			<!--/TMPL_IF-->
+			<!--TMPL_VAR Name="branchname"-->
 			</td>
 			<td><a href="<!-- TMPL_VAR NAME="action" -->?op=add_form&amp;bookfundid=<!-- TMPL_VAR NAME="bookfundid" --> ">
 				<img src="<!-- TMPL_VAR NAME="interface" -->/<!-- TMPL_VAR NAME="theme" -->/images/fileopen.png" alt="Bearbeiten" title="Bearbeiten" width="32" hspace="0" vspace="0" border="0"></a>
@@ -33,6 +30,7 @@
 		<tr>
 			<td>&nbsp;</td>
 			<th>Etat</th>
+			<th>Zweigstelle</th>
 			<td>
 				<a href="aqbudget.pl?op=add_form&amp;bookfundid=<!-- TMPL_VAR NAME="bookfundid" -->" class="button">
 				Etat hinzuf&uuml;gen</a>
@@ -43,7 +41,13 @@
 			<tr valign="top">
 				<td>&nbsp;</td>
 				<td>
-					<!-- TMPL_VAR NAME="startdate" --> - <!-- TMPL_VAR NAME="enddate" --> : <b><!-- TMPL_VAR NAME="budgetamount" --></b>
+					<!-- TMPL_VAR NAME="startdate" --> - <!-- TMPL_VAR NAME="enddate" --> : <b><!-- TMPL_VAR NAME="budgetamount" --></b> 
+				<td align="center">
+				<!--TMPL_IF Name="branchcode"-->
+				 	<!--TMPL_VAR Name="branchcode"-->
+				<!--TMPL_ELSE -->
+					&nbsp;
+				<!--/TMPL_IF-->
 				</td>
 				<td>
 					<a href="/cgi-bin/koha/admin/aqbudget.pl?op=add_form&amp;aqbudgetid=<!-- TMPL_VAR NAME="aqbudgetid" -->">
@@ -61,7 +65,7 @@
 	</table>
 	<form action="<!-- TMPL_VAR NAME="scriptname" -->" method="post">
 		<input type="hidden" name="op" value="add_form">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-		<br><input type="submit" class="button" value="Erwerbungsetat hinzuf&uuml;gen" title="Erwerbungsetat hinzuf&uuml;gen" alt="Erwerbungsetat hinzuf&uuml;gen"><br>
+		<br><input type="submit" class="button" value="Add Bookfund" title="Medienetat hinzuf&uuml;gen" alt="Medienetat hinzuf&uuml;gen"><br>
 		<br></form><br clear="all">
 	<p> &nbsp; </p>
 	<!-- /TMPL_IF -->
@@ -114,7 +118,7 @@
 			if (_alertString.length==0) {
 				document.Aform.submit();
 			} else {
-				alertString2  = _("Form not submitted because of the following problem(s)");
+				alertString2  = _("Daten wegen der folgenden Probleme nicht abgespeichert");
 				alertString2 += "\n------------------------------------------------------------------------------------\n";
 				alertString2 += _alertString;
 				alert(alertString2);
@@ -123,7 +127,7 @@
 		</script>
 	<h1>
 		<!-- TMPL_IF NAME="use-header-flags-p" -->
-		<!-- TMPL_IF NAME="header-is-add-p" -->Erwerbungsetat hinzuf&uuml;gen<!-- /TMPL_IF -->
+		<!-- TMPL_IF NAME="header-is-add-p" -->Medienetat hinzuf&uuml;gen<!-- /TMPL_IF -->
 		<!-- TMPL_IF NAME="header-is-modify-p" -->Medienetat bearbeiten<!-- /TMPL_IF -->
 		<!-- TMPL_ELSE -->
 		<!-- TMPL_VAR NAME="header" -->
@@ -134,11 +138,11 @@
 	<input type="hidden" name="checked" value="0">
 	<!-- TMPL_IF NAME="add_or_modify" -->
 	<p>
-		<label>Erwerbungsetat</label><input type="hidden" name="bookfundid" value="<!-- TMPL_VAR NAME="bookfundid" -->"><!-- TMPL_VAR NAME="bookfundid" -->
+		<label>Medienetat</label><input type="hidden" name="bookfundid" value="<!-- TMPL_VAR NAME="bookfundid" -->"><!-- TMPL_VAR NAME="bookfundid" -->
 	</p>
 	<!-- TMPL_ELSE -->
 	<p>
-		<label>Erwerbungsetat</label><input type="text" name="bookfundid" size="5" maxlength="5" onblur="toUC(this)">
+		<label>Medienetat</label><input type="text" name="bookfundid" size="5" maxlength="5" onblur="toUC(this)">
 	</p>
 	<!-- /TMPL_IF -->
 	<p>
@@ -146,7 +150,7 @@
 	</p>
 	<p>
 		<label>Zweigstelle</label><!-- TMPL_VAR NAME="CGIbranch"-->&nbsp;
-		<br/> Bitte eine ausw&auml;hlen wenn das Budget zweigstellenspezifisch ist, sonst leer lassen.
+		<br/> Bitte eine ausw&auml;hlen, wenn das Budget zweigstellenspezifisch ist, sonst leer lassen.
 	</p>
 	<p>
 		<label>&nbsp;</label><input type="button" value="OK" onclick="Check(this.form)" class="button">
@@ -155,7 +159,7 @@
 	<!-- /TMPL_IF -->
 	
 	<!-- TMPL_IF NAME="add_validate" -->
-	Daten gespeichert
+	Data recorded
 	<form action="<!-- TMPL_VAR NAME="action" -->" method="post">
 	<input type="submit" value="OK">
 	</form>
@@ -163,11 +167,11 @@
 	
 	<!-- TMPL_IF NAME="delete_confirm" -->
 	<table border="0" cellspacing="0" cellpadding="5">
-	<tr valign="top" bgcolor="#99cc33"><td background="<!-- TMPL_VAR NAME="themelang" -->/images/background-mem.gif"><b>Erwerbungsetat</b></td><td background="<!-- TMPL_VAR NAME="themelang" -->/images/background-mem.gif"><b><!-- TMPL_VAR NAME="bookfundid" --></b></td></tr>
+	<tr valign="top" bgcolor="#99cc33"><td background="<!-- TMPL_VAR NAME="themelang" -->/images/background-mem.gif"><b>Medienetat </b></td><td background="<!-- TMPL_VAR NAME="themelang" -->/images/background-mem.gif"><b><!-- TMPL_VAR NAME="bookfundid" --></b></td></tr>
 	<form action="<!-- TMPL_VAR NAME="action" -->" method="post"><input type="hidden" name="op" value="delete_confirmed"><input type="hidden" name="bookfundid" value="<!-- TMPL_VAR NAME="bookfundid" -->">
 	<tr><td>Name</td><td><!-- TMPL_VAR NAME="bookfundname" --></td></tr>
-	<tr><td colspan="2" align="center">L&ouml;schen best&auml;tigen</td></tr>
-	<tr><td><input type="submit" value="JA"></form></td><td><form action="<!-- TMPL_VAR NAME="action" -->" method="post"><input type="submit" value="NEIN"></form></td></tr><br clear="all">
+	<tr><td colspan="2" align="center">L&Ouml;SCHEN BEST&Auml;TIGEN</td></tr>
+	<tr><td><input type="submit" value="YES"></form></td><td><form action="<!-- TMPL_VAR NAME="action" -->" method="post"><input type="submit" value="NO"></form></td></tr><br clear="all">
 	<p> &nbsp; </p>
 	<!-- /TMPL_IF -->
 	
