--- a/koha-tmpl/intranet-tmpl/prog/en/circ/branchoverdues.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/circ/branchoverdues.tmpl
@@ -4,51 +4,43 @@
 <!-- TMPL_INCLUDE NAME="menus.inc" -->
 <!-- TMPL_INCLUDE NAME="menu-circ.inc" -->
 
-<h1>Circulation: Branch Overdues</h1>
+<h1>Circulation: Branch Overdues at <!-- TMPL_VAR NAME="LoginBranchname" --></h1>
 
 <div id="mainbloc">
-<!-- selector of department -->
-<fieldset id="branch_odues_select_department">
-<!-- TMPL_IF NAME="department" -->
-<legend>department selected</legend>
-<form name="changedepartment" action="branchoverdues.pl">
+<!-- selector of location -->
+<!-- TMPL_IF NAME="location" -->
+<legend>location selected</legend>
+<form name="changelocation" action="branchoverdues.pl">
     <ul>
         <li>
-            You are working actually on the overdues for the department : <b><!-- TMPL_VAR NAME="department" --></b>
-    <input type="submit" name="changedepartment" class="button" value="change department">
+            You are working actually on the overdues for the location : <b><!-- TMPL_VAR NAME="location" --></b>
+    <input type="submit" name="changelocation" class="button" value="change location">
         </li>
     </ul>
 </form>
 <!-- TMPL_ELSE -->
-<legend>Select your department</legend>
-<ul>
-    <li>
-        <form name="selectdepartment" action="branchoverdues.pl" method="post">
-        <select id="department" name="department">
-            <option value="">All departments</option>
-            <!-- TMPL_LOOP NAME="departmentsloop" -->
-                <option value="<!-- TMPL_VAR NAME="authorised_value" -->"><!-- TMPL_VAR NAME="lib" --></option>
-            <!-- /TMPL_LOOP -->
-        </select>
-        <input type="submit" name="department" class="button" value="change department">
-        </form>
-    </li>
-</ul>
+<p>Select a location
+<form name="selectlocation" action="branchoverdues.pl" method="post">
+    <select id="location" name="location">
+        <option value="">All locations</option>
+        <!-- TMPL_LOOP NAME="locationsloop" -->
+            <option value="<!-- TMPL_VAR NAME="authorised_value" -->"><!-- TMPL_VAR NAME="lib" --></option>
+        <!-- /TMPL_LOOP -->
+    </select>
+    <input type="submit" name="location" class="button" value="OK">
+</form>
+</p>
 <!-- /TMPL_IF -->
-</fieldset>
-
-    <fieldset id="branch_odues_global_odues">
-    <legend>Overdues at <!-- TMPL_VAR NAME="LoginBranchname" --></legend>
     <form name="sendnotify" action="branchoverdues.pl" method="post">
     <!-- TMPL_IF name="overduesloop" -->
         <table>
         <tr>
-            <th class="circulation">Date_due</th>
-            <th class="circulation">Title</th>
-            <th class="circulation">Borrower</th>
-            <th class="circulation">Localisation</th>
-            <th class="circulation">Overdue status</th>
-            <th class="circulation">Notify by</th>
+            <th>Date_due</th>
+            <th>Title</th>
+            <th>Borrower</th>
+            <th>Location</th>
+            <th>Overdue status</th>
+            <th>Notify by</th>
         </tr>
             <!-- TMPL_LOOP NAME="overduesloop" -->
                 <tr>
@@ -88,24 +80,24 @@
                     <td align="center">
                     <!-- TMPL_IF NAME="overdue1" -->
                         <!-- TMPL_IF NAME="borroweremail" -->
-                            <a href="branchoverdues.pl?action=add&borrowernumber=<!-- TMPL_VAR NAME="borrowernumber"-->&itemnumber=<!-- TMPL_VAR NAME="itemnumber" -->&method=mail&department=<!-- TMPL_VAR NAME="departmentValue" -->&overduelevel=<!-- TMPL_VAR NAME="overdueLevel" -->&notifyId=<!-- TMPL_VAR NAME="notify_id" -->">mail</a>
+                            <a href="branchoverdues.pl?action=add&borrowernumber=<!-- TMPL_VAR NAME="borrowernumber"-->&itemnumber=<!-- TMPL_VAR NAME="itemnumber" -->&method=mail&location=<!-- TMPL_VAR NAME="location" -->&overduelevel=<!-- TMPL_VAR NAME="overdueLevel" -->&notifyId=<!-- TMPL_VAR NAME="notify_id" -->">mail</a>
                         <!-- TMPL_ELSE -->
                             mail
                         <!-- /TMPL_IF -->
                             &nbsp;|&nbsp;
-                            <a href="branchoverdues.pl?action=add&borrowernumber=<!-- TMPL_VAR NAME="borrowernumber"-->&itemnumber=<!-- TMPL_VAR NAME="itemnumber" -->&method=phone&department=<!-- TMPL_VAR NAME="departmentValue" -->&overduelevel=<!-- TMPL_VAR NAME="overdueLevel" -->&notifyId=<!-- TMPL_VAR NAME="notify_id" -->
+                            <a href="branchoverdues.pl?action=add&borrowernumber=<!-- TMPL_VAR NAME="borrowernumber"-->&itemnumber=<!-- TMPL_VAR NAME="itemnumber" -->&method=phone&location=<!-- TMPL_VAR NAME="location" -->&overduelevel=<!-- TMPL_VAR NAME="overdueLevel" -->&notifyId=<!-- TMPL_VAR NAME="notify_id" -->
                             ">phone</a>
                             &nbsp;|&nbsp;
-                            <a href="branchoverdues.pl?action=add&borrowernumber=<!-- TMPL_VAR NAME="borrowernumber"-->&itemnumber=<!-- TMPL_VAR NAME="itemnumber" -->&method=letter&department=<!-- TMPL_VAR NAME="departmentValue" -->&overduelevel=<!-- TMPL_VAR NAME="overdueLevel" -->
+                            <a href="branchoverdues.pl?action=add&borrowernumber=<!-- TMPL_VAR NAME="borrowernumber"-->&itemnumber=<!-- TMPL_VAR NAME="itemnumber" -->&method=letter&location=<!-- TMPL_VAR NAME="location" -->&overduelevel=<!-- TMPL_VAR NAME="overdueLevel" -->
                             &notifyId=<!-- TMPL_VAR NAME="notify_id" -->">letter</a>
                     <!-- /TMPL_IF -->
                     
                     <!-- TMPL_IF NAME="overdue2" -->
-                        <a href="branchoverdues.pl?action=add&borrowernumber=<!-- TMPL_VAR NAME="borrowernumber"-->&itemnumber=<!-- TMPL_VAR NAME="itemnumber" -->&method=letter&department=<!-- TMPL_VAR NAME="departmentValue" -->&overduelevel=<!-- TMPL_VAR NAME="overdueLevel" -->&notifyId=<!-- TMPL_VAR NAME="notify_id" -->">letter</a>
+                        <a href="branchoverdues.pl?action=add&borrowernumber=<!-- TMPL_VAR NAME="borrowernumber"-->&itemnumber=<!-- TMPL_VAR NAME="itemnumber" -->&method=letter&location=<!-- TMPL_VAR NAME="location" -->&overduelevel=<!-- TMPL_VAR NAME="overdueLevel" -->&notifyId=<!-- TMPL_VAR NAME="notify_id" -->">letter</a>
                     <!-- /TMPL_IF -->
                     
                     <!-- TMPL_IF NAME="overdue3" -->
-                    <a href="branchoverdues.pl?action=add&borrowernumber=<!-- TMPL_VAR NAME="borrowernumber"-->&itemnumber=<!-- TMPL_VAR NAME="itemnumber" -->&method=lost&department=<!-- TMPL_VAR NAME="departmentValue" -->&overduelevel=<!-- TMPL_VAR NAME="overdueLevel" -->
+                    <a href="branchoverdues.pl?action=add&borrowernumber=<!-- TMPL_VAR NAME="borrowernumber"-->&itemnumber=<!-- TMPL_VAR NAME="itemnumber" -->&method=lost&location=<!-- TMPL_VAR NAME="location" -->&overduelevel=<!-- TMPL_VAR NAME="overdueLevel" -->
                     &notifyId=<!-- TMPL_VAR NAME="notify_id" -->">Considered lost</a>
                     <!-- /TMPL_IF -->
                     
@@ -114,68 +106,67 @@
             <!-- /TMPL_LOOP -->
         </table>
     <!-- TMPL_ELSE -->
-        There are no overdues for your library today
+        There is no overdue for today
     <!-- /TMPL_IF -->
-    </fieldset>
-<!-- TMPL_IF name="todayoverduesloop" -->
-    <fieldset id="branch_odues_today_odues">
-    <legend>Today's notifications</legend>	
-        <table>
-        <tr>
-            <th class="circulation">Date_due</th>
-            <th class="circulation">Title</th>
-            <th class="circulation">Borrower</th>
-            <th class="circulation">Localisation</th>
-            <th class="circulation">Overdue status</th>
-            <th class="circulation">Notified by</th>
-            <th class="circulation">Cancel</th>			
-        </tr>
-            <!-- TMPL_LOOP NAME="todayoverduesloop" -->
-                <tr>
-                    <td>
-                        <p>
-                        <!-- TMPL_VAR NAME="date_due" -->
-                        </p>
-                    </td>
-                    <td>
-                        <p>
-                            <a href="/cgi-bin/koha/catalogue/MARCdetail.pl?biblionumber=<!-- TMPL_VAR NAME="biblionumber" -->"><!-- TMPL_VAR NAME="title" --></a>
-                            &nbsp; (<b><!-- TMPL_VAR NAME="description" --></b>)
-                            <br />Barcode : <!-- TMPL_VAR NAME="barcode" -->
-                        </p>
-                    </td>
-                    <td>
-                        <p><a href="/cgi-bin/koha/members/moremember.pl?borrowernumber=<!--TMPL_VAR Name="borrowernumber"-->"><!-- TMPL_VAR NAME="borrowersurname" --> &nbsp; <!-- TMPL_VAR NAME="borrowerfirstname" --></a><br /><!-- TMPL_VAR NAME="borrowerphone" --><br />
-                    <!-- TMPL_IF NAME="borroweremail" --><a href="mailto:<!-- TMPL_VAR NAME="borroweremail" -->?subject=Overdue: <!-- TMPL_VAR NAME="title" -->">
-                    <!-- TMPL_VAR NAME="borroweremail" --></a><!--/TMPL_IF-->
-                        </p>
-                    </td>
-                    <td><p><!-- TMPL_VAR NAME="homebranch" --> <!-- TMPL_VAR NAME="itemcallnumber" --></p>
-                    </td>
-                    <td align="center">
-                        <b>
-                            <!-- TMPL_IF NAME="overdue1" -->
-                                first overdue
-                            <!-- /TMPL_IF -->
-                            <!-- TMPL_IF NAME="overdue2" -->
-                                second overdue
-                            <!-- /TMPL_IF -->
-                            <!-- TMPL_IF NAME="overdue3" -->
-                                considered lost
-                            <!-- /TMPL_IF -->
-                        </b>
-                    </td>
-                    <td align="center">
-                        <b><!-- TMPL_VAR NAME="notify_method" --></b>
-                    </td>
-                
-                    <td>
-                    <a href="branchoverdues.pl?action=remove&borrowernumber=<!-- TMPL_VAR NAME="borrowernumber"-->&itemnumber=<!-- TMPL_VAR NAME="itemnumber" -->&method=phone&department=<!-- TMPL_VAR NAME="departmentValue" -->&notify_date=<!-- TMPL_VAR NAME="notify_date" -->">cancel notification</a>
-                    </td>
-                </tr>
-            <!-- /TMPL_LOOP -->
-        </table>
-    </fieldset>
-<!-- /TMPL_IF -->
+    <!-- TMPL_IF name="todayoverduesloop" -->
+        <fieldset id="branch_odues_today_odues">
+        <legend>Today's notifications</legend>	
+            <table>
+            <tr>
+                <th>Date_due</th>
+                <th>Title</th>
+                <th>Borrower</th>
+                <th>Localisation</th>
+                <th>Overdue status</th>
+                <th>Notified by</th>
+                <th>Cancel</th>			
+            </tr>
+                <!-- TMPL_LOOP NAME="todayoverduesloop" -->
+                    <tr>
+                        <td>
+                            <p>
+                            <!-- TMPL_VAR NAME="date_due" -->
+                            </p>
+                        </td>
+                        <td>
+                            <p>
+                                <a href="/cgi-bin/koha/catalogue/MARCdetail.pl?biblionumber=<!-- TMPL_VAR NAME="biblionumber" -->"><!-- TMPL_VAR NAME="title" --></a>
+                                &nbsp; (<b><!-- TMPL_VAR NAME="description" --></b>)
+                                <br />Barcode : <!-- TMPL_VAR NAME="barcode" -->
+                            </p>
+                        </td>
+                        <td>
+                            <p><a href="/cgi-bin/koha/members/moremember.pl?borrowernumber=<!--TMPL_VAR Name="borrowernumber"-->"><!-- TMPL_VAR NAME="borrowersurname" --> &nbsp; <!-- TMPL_VAR NAME="borrowerfirstname" --></a><br /><!-- TMPL_VAR NAME="borrowerphone" --><br />
+                        <!-- TMPL_IF NAME="borroweremail" --><a href="mailto:<!-- TMPL_VAR NAME="borroweremail" -->?subject=Overdue: <!-- TMPL_VAR NAME="title" -->">
+                        <!-- TMPL_VAR NAME="borroweremail" --></a><!--/TMPL_IF-->
+                            </p>
+                        </td>
+                        <td><p><!-- TMPL_VAR NAME="homebranch" --> <!-- TMPL_VAR NAME="itemcallnumber" --></p>
+                        </td>
+                        <td align="center">
+                            <b>
+                                <!-- TMPL_IF NAME="overdue1" -->
+                                    first overdue
+                                <!-- /TMPL_IF -->
+                                <!-- TMPL_IF NAME="overdue2" -->
+                                    second overdue
+                                <!-- /TMPL_IF -->
+                                <!-- TMPL_IF NAME="overdue3" -->
+                                    considered lost
+                                <!-- /TMPL_IF -->
+                            </b>
+                        </td>
+                        <td align="center">
+                            <b><!-- TMPL_VAR NAME="notify_method" --></b>
+                        </td>
+                    
+                        <td>
+                        <a href="branchoverdues.pl?action=remove&borrowernumber=<!-- TMPL_VAR NAME="borrowernumber"-->&itemnumber=<!-- TMPL_VAR NAME="itemnumber" -->&method=phone&location=<!-- TMPL_VAR NAME="location" -->&notify_date=<!-- TMPL_VAR NAME="notify_date" -->">cancel notification</a>
+                        </td>
+                    </tr>
+                <!-- /TMPL_LOOP -->
+            </table>
+        </fieldset>
+    <!-- /TMPL_IF -->
 </div>
 <!-- TMPL_INCLUDE name="intranet-bottom.inc" -->
